tdf#162111: promote integer types automatically

The problem was, that importing an HTML table into Firebird, and creating
a primary key, called OParameterUpdateHelper::updateInt for each record's
primary key field.  Since commit c07548447a564b2d142cc439a124b76e6a71dfbd
(Related: tdf#108057 Use autoincrement for automatically added primary key,
2024-03-20), the type of autocreated primary key in Firebird databases is
SQL_INT64, and before this change, OPreparedStatement::setInt failed when
the real field's type wasn't strictly SQL_LONG.

This allows Firebird SDBC's  integral OPreparedStatement::set* methods to
promote to larger numeric types capable to represent the values.

Change-Id: I7615c8e9ffa29271d04cf264bb950cb76946dfd6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170787
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins