connectivity/source/drivers/firebird/ResultSetMetaData.cxx
@@ -102,10 +102,7 @@ sal_Int32 SAL_CALL OResultSetMetaData::getColumnType(sal_Int32 column)
         sCharset = getCharacterSet(column);
     }
 
-    ColumnTypeInfo aInfo( m_pSqlda->sqlvar[column-1].sqltype,
-            m_pSqlda->sqlvar[column-1].sqlsubtype,
-            -(m_pSqlda->sqlvar[column-1].sqlscale),
-            sCharset );
+    ColumnTypeInfo aInfo(m_pSqlda, column, sCharset);
 
     return aInfo.getSdbcType();
 }
@@ -158,9 +155,7 @@ OUString SAL_CALL OResultSetMetaData::getColumnTypeName(sal_Int32 column)
 {
     verifyValidColumn(column);
 
-    ColumnTypeInfo aInfo( m_pSqlda->sqlvar[column-1].sqltype,
-            m_pSqlda->sqlvar[column-1].sqlsubtype,
-            -(m_pSqlda->sqlvar[column-1].sqlscale) );
+    ColumnTypeInfo aInfo(m_pSqlda, column);
 
     return aInfo.getColumnTypeName();
 }
